// Copyright 2019 SolarNetwork Foundation.
// Copyright 2021 Ecogy Energy.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package api.esi;

option go_package = "github.com/elijahjpassmore/api/esi";

import "google/protobuf/timestamp.proto";
import "api/esi/der_route.proto";
import "api/esi/price_map.proto";
import "api/esi/uuid.proto";

// An offer on a price map.
message PriceMapOffer {

  // The routing info.
  //
  // The MessageSignature of the route must include the following:
  //
  // * `exchange_uid` UTF-8 bytes
  // * `facility_uid` UTF-8 bytes
  // * `offer_id.hi` big-endian encoded bytes
  // * `offer_id.lo` big-endian encoded bytes
  // * `when.seconds` big-endian encoded bytes
  // * `when.nanos` big-endian encoded bytes
  // * all `price_map` properties defined in price_map.proto
  DerRoute route = 1;

  // The globally unique ID of this offer.
  Uuid offer_id = 2;

  // When the offer should be executed.
  google.protobuf.Timestamp when = 3;

  // The price map on offer.
  PriceMap price_map = 4;

}
